# ext

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c  version.c.in  version.h
